--- a/environment_linux.yml
+++ b/environment_linux.yml
@@ -95,4 +95,4 @@ dependencies:
   - jupyter-console==5.2.0
   - jupyter-core==4.3.0
   - prompt-toolkit==1.0.15
-  - django-redis=4.10.0
+  - django-redis==4.10.0
